force-app/main/default/objects/VDT_Query__mdt/VDT_Query__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure the SOQL queries to execute based on the module and Package version</description>
    <label>VDT Query</label>
    <pluralLabel>VDT Queries</pluralLabel>
</CustomObject>