force-app/main/default/objects/VDT_Query__mdt/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Data Analysis</fullName>
                <default>true</default>
                <label>Master Data Analysis</label>
            </value>
            <value>
                <fullName>Product Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>