force-app/main/default/objects/VDT_Query__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>